<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
  	<TextView 
  		android:text="@+id/TextView01" 
  		android:id="@+id/tud_counter" 
  		android:layout_width="wrap_content" 
  		android:layout_height="wrap_content" style="@style/YFrog.CounterStyle">
  	</TextView>
  	
	<include 
		android:id="@+id/empty" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		layout="@layout/twitter_user">
	</include>

	<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">
		<TextView 
			android:layout_height="wrap_content" 
			android:text="@+id/TextView01" 
			android:layout_width="fill_parent" 
			android:id="@+id/tud_location" android:layout_margin="10px">
		</TextView>
	</LinearLayout>
	<TextView 
		android:layout_height="wrap_content" 
		android:text="@+id/TextView01" 
		android:layout_width="fill_parent" 
		android:id="@+id/tud_location" android:layout_margin="10px">
	</TextView>

	<Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/tud_recent_tweets" 
		android:text="@string/tud_btn_recent_tweets" 
		android:layout_gravity="center" 
		android:layout_marginTop="15px" android:focusable="false" android:visibility="gone">
	</Button>

	<Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/tud_send_pub_replay" 
		android:text="@string/tud_btn_send_pub_reply" 
		android:layout_gravity="center" android:focusable="false" android:visibility="gone">
	</Button>

	<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center" android:id="@+id/tud_followers" android:text="@string/tud_btn_followers" android:focusable="false" android:visibility="gone"></Button><Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tud_follow" android:layout_gravity="center" android:text="@string/tud_btn_follow" android:focusable="false" android:layout_marginTop="15px"></Button><Button 
		android:id="@+id/tud_send_dir_message" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:text="@string/tud_btn_send_dir_message" 
		android:layout_gravity="center" android:focusable="false" android:visibility="gone">
	</Button>



</LinearLayout>
