<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical">
  	
  	<TextView 
  		android:text="@+id/TextView01" 
  		android:id="@+id/tm_counter" 
  		android:layout_width="wrap_content" 
  		android:layout_height="wrap_content" style="@style/YFrog.CounterStyle">
  	</TextView>
	
	<include 
		android:id="@+id/empty" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		layout="@layout/twitter_user">
	</include>
	
	<TextView 
		android:text="@+id/TextView01" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:id="@+id/tm_created_at" 
		android:textSize="12sp" 
		android:textStyle="italic" android:layout_marginLeft="10px" android:layout_marginTop="15px">
	</TextView>
	
	<TextView 
		android:layout_height="wrap_content" 
		android:text="@+id/TextView01" 
		android:layout_width="fill_parent" 
		android:id="@+id/tm_text" android:layout_margin="10px">
	</TextView>
	
	<Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/tm_replay" 
		android:text="@string/tm_btn_reply" 
		android:layout_gravity="center" 
		android:layout_marginTop="15px" android:focusable="false" android:visibility="gone">
	</Button>

	<Button 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:id="@+id/tm_forward" 
		android:text="@string/tm_btn_forward" 
		android:layout_gravity="center" android:focusable="false" android:visibility="gone">
	</Button>

	<Button 
		android:id="@+id/tm_favorite" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:text="@string/tm_btn_favorite" 
		android:layout_gravity="center" android:focusable="false" android:layout_marginTop="15px">
	</Button>
	
	<Button 
		android:id="@+id/tm_delete" 
		android:layout_height="wrap_content" 
		android:layout_width="wrap_content" 
		android:text="@string/tm_btn_delete" 
		android:layout_gravity="center" android:focusable="false" android:visibility="gone">
	</Button>
	


</LinearLayout>
